alteração para ferebase

--- a/index.html
+++ b/index.html
@@ -118,6 +118,26 @@
   </footer>
 
   <script src="script.js"></script>
-</body>
+  
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.0/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyBeTW9bgaHVS2PZpjEwMSTsABCBum1790Q",
+    authDomain: "catalogojumake.firebaseapp.com",
+    projectId: "catalogojumake",
+    storageBucket: "catalogojumake.firebasestorage.app",
+    messagingSenderId: "665022672285",
+    appId: "1:665022672285:web:e286e10ccc0d73ec331374"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
+
+</body>
 </html>
