--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <header>
     <img src="logomarca.png" alt="Logo da Loja" class="logo" onerror="this.src='https://via.placeholder.com/200x100?text=JU+MAKE'" />
     <h1>CATÁLOGO DE PRODUTOS</h1>
-    
+    <a href="admin.html" class="admin-link" title="Acessar Painel de Administração">
+      <i class="fas fa-cog"></i>
+    </a>
   </header>
 
   <div class="banner-rotativo">
@@ -118,26 +120,6 @@
   </footer>
 
   <script src="script.js"></script>
-  
-  <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.0/firebase-app.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  const firebaseConfig = {
-    apiKey: "AIzaSyBeTW9bgaHVS2PZpjEwMSTsABCBum1790Q",
-    authDomain: "catalogojumake.firebaseapp.com",
-    projectId: "catalogojumake",
-    storageBucket: "catalogojumake.firebasestorage.app",
-    messagingSenderId: "665022672285",
-    appId: "1:665022672285:web:e286e10ccc0d73ec331374"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-</script>
-
 </body>
+
 </html>
