--- a/index.html
+++ b/index.html
@@ -1,79 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Catálogo de Maquiagem</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JU MAKE - Catálogo de Produtos</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-
 <body>
-
+  <!-- Header -->
   <header>
-    <img src="logomarca.png" alt="Logo da Loja" class="logo" onerror="this.src='https://via.placeholder.com/200x100?text=JU+MAKE'" />
+    <img src="placeholder.svg" alt="JU MAKE" class="logo" onerror="this.src='https://via.placeholder.com/200x100?text=JU+MAKE'">
     <h1>CATÁLOGO DE PRODUTOS</h1>
-    <a href="admin.html" class="admin-link" title="Acessar Painel de Administração">
-      <i class="fas fa-cog"></i>
-    </a>
+    <!-- Removido o ícone de engrenagem/link para admin -->
   </header>
 
+  <!-- Banner rotativo -->
   <div class="banner-rotativo">
     <div class="banner-slides">
-      <div class="banner-slide active">
-        <img src="ban1_1.png" alt="Promoção 1" onerror="this.src='https://via.placeholder.com/1200x400?text=Banner+1'" />
-      </div>
-      <div class="banner-slide">
-        <img src="ban1_2.png" alt="Promoção 2" onerror="this.src='https://via.placeholder.com/1200x400?text=Banner+2'" />
-      </div>
-      <div class="banner-slide">
-        <img src="ban1_3.png" alt="Produto 3" onerror="this.src='https://via.placeholder.com/1200x400?text=Banner+3'" />
-      </div>
+      <!-- Banners serão carregados via JavaScript -->
     </div>
-
     <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
     <button class="next" onclick="changeSlide(1)">&#10095;</button>
-    
     <div class="dots-container">
-      <span class="dot active" onclick="goToSlide(0)"></span>
-      <span class="dot" onclick="goToSlide(1)"></span>
-      <span class="dot" onclick="goToSlide(2)"></span>
+      <!-- Dots serão carregados via JavaScript -->
     </div>
   </div>
 
+  <!-- Busca -->
   <div class="search-container">
     <input type="text" id="buscarProduto" placeholder="Buscar produto..." oninput="filtrarProdutos()">
   </div>
 
+  <!-- Filtros de categoria -->
   <div class="category-filter">
-    <button class="category-btn active" data-category="todos">Todos</button>
-    <button class="category-btn" data-category="Rosto">Rosto</button>
-    <button class="category-btn" data-category="Olhos">Olhos</button>
-    <button class="category-btn" data-category="Lábios">Lábios</button>
-    <button class="category-btn" data-category="Skincare">Skincare</button>
-    <button class="category-btn" data-category="Acessórios">Acessórios</button>
-    <button class="category-btn" data-category="Kits">Kits</button>
+    <button class="category-btn active" data-category="todos" onclick="filtrarPorCategoria('todos')">Todos</button>
+    <button class="category-btn" data-category="Rosto" onclick="filtrarPorCategoria('Rosto')">Rosto</button>
+    <button class="category-btn" data-category="Olhos" onclick="filtrarPorCategoria('Olhos')">Olhos</button>
+    <button class="category-btn" data-category="Lábios" onclick="filtrarPorCategoria('Lábios')">Lábios</button>
+    <button class="category-btn" data-category="Skincare" onclick="filtrarPorCategoria('Skincare')">Skincare</button>
+    <button class="category-btn" data-category="Acessórios" onclick="filtrarPorCategoria('Acessórios')">Acessórios</button>
+    <button class="category-btn" data-category="Kits" onclick="filtrarPorCategoria('Kits')">Kits</button>
   </div>
 
+  <!-- Catálogo de produtos -->
   <main id="catalogo" class="catalogo-produtos">
-    <!-- Produtos carregados via script.js -->
+    <!-- Produtos serão carregados via JavaScript -->
   </main>
 
-  <div id="lightbox" class="lightbox">
-    <span class="close-lightbox">&times;</span>
-    <img id="lightbox-img" src="https://via.placeholder.com/800x800?text=Imagem" alt="Imagem ampliada">
-    <div class="lightbox-controls">
-      <button id="lightbox-prev">&#10094;</button>
-      <span id="lightbox-counter">1/1</span>
-      <button id="lightbox-next">&#10095;</button>
-    </div>
-  </div>
-
+  <!-- Modal de detalhes do produto -->
   <div id="produto-detalhe" class="produto-detalhe">
     <div class="detalhe-overlay"></div>
     <div class="detalhe-conteudo">
-      <span class="fechar-detalhe">&times;</span>
+      <span class="fechar-detalhe" onclick="fecharDetalhe()">&times;</span>
       <div class="detalhe-grid">
         <div class="detalhe-imagens">
           <div class="detalhe-imagem-principal">
@@ -97,29 +76,28 @@
     </div>
   </div>
 
+  <!-- Footer -->
   <footer class="rodape">
     <div class="rodape-conteudo">
-      <img src="Logo.png" alt="JU MAKE" class="logo-rodape" onerror="this.src='https://via.placeholder.com/90x90?text=JU+MAKE'" />
+      <img src="placeholder.svg" alt="JU MAKE" class="logo-rodape" onerror="this.src='https://via.placeholder.com/90x90?text=JU+MAKE'">
       <div class="texto-rodape">
         <h2>JU MAKE</h2>
         <p class="footer-copy">2025 JU MAKE - Todos os direitos reservados. 
-          <a href="https://www.instagram.com/studio.frame.pro/" class="footer-link">Segurança e privacidade</a>
+          <a href="#" class="footer-link">Segurança e privacidade</a>
         </p>
       </div>
       <div class="social-links">
-        <a href="https://www.instagram.com/studio.frame.pro/" target="_blank" class="social-link">
+        <a href="https://www.instagram.com/" target="_blank" class="social-link">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://wa.me/5587991065384" target="_blank" class="social-link">
+        <a href="https://wa.me/5587992437345" target="_blank" class="social-link">
           <i class="fab fa-whatsapp"></i>
         </a>
       </div>
     </div>
-    <button id="btnTopo" onclick="voltarAoTopo()" title="Voltar ao topo">&#8593;
-    </button>
+    <button id="btnTopo" onclick="voltarAoTopo()" title="Voltar ao topo">&#8593;</button>
   </footer>
 
   <script src="script.js"></script>
 </body>
-
 </html>
