--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <!-- Header -->
   <header>
-    <img src="placeholder.svg" alt="JU MAKE" class="logo" onerror="this.src='https://via.placeholder.com/200x100?text=JU+MAKE'">
+    <img src="placeholder.svg" alt="JU MAKE" class="logo" onerror="this.src='https://github.com/coodenext/catalogojumake0.2/blob/main/logomarca.png?raw=true'">
     <h1>CATÁLOGO DE PRODUTOS</h1>
     <!-- Removido o ícone de engrenagem/link para admin -->
   </header>
