--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
   <!-- Footer -->
   <footer class="rodape">
     <div class="rodape-conteudo">
-      <img src="placeholder.svg" alt="JU MAKE" class="logo-rodape" onerror="this.src='https://via.placeholder.com/90x90?text=JU+MAKE'">
-      <div class="texto-rodape">
-        <h2>JU MAKE</h2>
+      <img src="placeholder.svg" alt="JU MAKE" class="logo-rodape" onerror="this.src='https://github.com/coodenext/catalogojumake0.2/blob/main/Logo.png?raw=true'">
         <p class="footer-copy">2025 JU MAKE - Todos os direitos reservados. 
           <a href="#" class="footer-link">Segurança e privacidade</a>
         </p>
