--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
     <!-- Removido o ícone de engrenagem/link para admin -->
   </header>
 
-  <header>
-    <nav class="menu">
-      <a href="#sobre">Quem Somos</a>
-      <a href="#pagamento">Formas de Pagamento</a>
-      <a href="https://wa.me/5587992437345" target="_blank">Atendimento</a>
-    </nav>
-  </header>
+  <div class="menu">
+    <a href="#sobre">Quem Somos</a>
+    <a href="#pagamento">Formas de Pagamento</a>
+    <a href="https://wa.me/5587992437345" target="_blank">Atendimento</a>
+  </div>
+
   <!-- Banner rotativo -->
   <div class="banner-rotativo">
     <div class="banner-slides">
@@ -118,6 +117,8 @@
     </div>
     <button id="btnTopo" onclick="voltarAoTopo()" title="Voltar ao topo">&#8593;</button>
   </footer>
+
+  <link rel="stylesheet" href="style.css">
 
   <script src="script.js"></script>
 
